fullSandbox11072023/force-app/main/default/objects/Snares_Mapping__mdt/Snares_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Snares_Mapping</label>
    <pluralLabel>Snares_Mappings</pluralLabel>
</CustomObject>