fullSandbox11072023/force-app/main/default/objects/Snares_Mapping__mdt/fields/ISR_Rep_Number__c.field-meta.xml
<CustomField>
    <fullName>ISR_Rep_Number__c</fullName>
    <label>ISR Rep Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>