fullSandbox11072023/force-app/main/default/objects/Snares_Mapping__mdt/fields/Territory_Number__c.field-meta.xml
<CustomField>
    <fullName>Territory_Number__c</fullName>
    <label>Territory Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>